# ssh-app-repo

.github/workflows/: python-app.yml
App/: .gitignore  pyproject.toml
App/workflows/: python-app.yml
