[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aarij Khan <aarijomark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
